# ProjectiveGeometry

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS
projective_geometry/: __main__.py  frisbee.py
projective_geometry/camera/: __init__.py  camera.py  camera2.py  camera_distortion.py  camera_params.py  camera_pose.py  geometry.py  homography.py
projective_geometry/draw/: colors.py  image_size.py
projective_geometry/entrypoints/: __init__.py  camera_pose_from_four_points_demo_fn.py  focal_length_from_orthogonal_vanishing_points_demo_fn.py  frisbee_demo_fn.py  homography_from_correspondences_demo_fn.py  homography_from_ellipse_correspondences_demo_fn.py  homography_from_image_registration_demo_fn.py  homography_from_line_correspondences_demo_fn.py  homography_from_point_correspondences_demo_fn.py  intrinsic_from_three_planes_demo_fn.py  locate_3d_ball_trajectory_demo_fn.py  locate_ball_3d_demo_fn.py  utils.py
projective_geometry/geometry/: __init__.py  conic.py  ellipse.py  ellipse_arc.py  exceptions.py  line.py  line_segment.py  point.py
projective_geometry/image_registration/: register.py
projective_geometry/physics_engine/: config.py  cost_functions.py  events.py  motion_equations.py  optimization.py  state.py  trajectory.py  utils.py
projective_geometry/pitch_template/: basketball_template.py  pitch_dims.py  pitch_template.py
projective_geometry/projection/: __init__.py  projectors.py  reproj_error.py
projective_geometry/solvers/: __init__.py  arun.py  p4p_solver.py  (+1 more)
scripts/: run-pre-commit.sh  setup-local-hooks.sh
(+9 files in other folders)
