[tool.poetry]
name = "projectivegeometry"
version = "0.1.0"
description = "Educational package to learn how different geometric features are projected under homography transforms"
authors = ["Inaki Rabanillo <lanza241>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
