[tool.poetry]
name = "projective_geometry"
version = "0.1.0"
description = "Educational package to learn how different geometric features are projected under homography transforms"
authors = ["Inaki Rabanillo <lanza241>"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
opencv-python = "^4.7.0"
scipy = "^1.10.1"
typer = "^0.7.0"
pre-commit = "^3.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
